# ocr_backend

./: Dockerfile  api.py  pyproject.toml  test_ocr.ipynb
